sidebar requires click to receive mouse events
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | verified |
People
(Reporter: st, Assigned: hsivonen)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
-
I'm using today's nightly build (68.0a1 2019-03-19, Linux 64-bit)
-
Start Firefox with a new, temporary profile:
$ rm -rf /run/user/1000/temp-profile $ mkdir -p /run/user/1000/temp-profile $ ~/Downloads/firefox/firefox -noremote -profile /run/user/1000/temp-profile -
Install the Tree Style Tab addon from https://addons.mozilla.org/en-US/firefox/addon/tree-style-tab/
-
Once the addon is installed, it opens a list of tabs in the sidebar, which should have four tabs in it (the Firefox first run page, a privacy notice, the a.m.o page for TST, and the TST first run page)
Actual results:
- Move the mouse over the tabs in the sidebar, notice that there are no :hover effects
- Click on the sidebar content, then move the mouse again, and notice that now tabs change color on :hover
- Click on a different tab in the sidebar to switch to it, then move the mouse again, and notice that :hover effects have ceased
- Try to close a tab in the sidebar, notice you need to click once to get it to respond to mouse events, then click again to make the thing happen
Generally, everything in the sidebar now takes an extra click. If you have enough tabs open, even scrolling with the mouse-wheel requires a click before it works.
Also, once you've clicked in the sidebar, you need to select a different tab, or click back on the main content area before :hover or clicks register there.
Expected results:
Sidebar content should always respond to mouse-hover and click, without the extra "activating" click.
Note that this doesn't seem to affect browser-supplied sidebars like Bookmarks or History.. It does seem to affect the Downloads Sidebar addon (https://addons.mozilla.org/en-US/firefox/addon/downloads-sidebar/), or any webpage opened in the sidebar with the Open In Sidebar addon (https://addons.mozilla.org/en-US/firefox/addon/open-link-in-sidebar/?src=search)
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2244c803a5d08806b9824af9f2f8700791034cd0&tochange=8cd5c2339ca11b720f8b0e067c463f66b1f0ad5c
Regressed by Bug 1535541.
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Should probably check event class before performing focus-based routing.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
Filed bug 1536918.
Comment 7•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 9•6 years ago
|
||
Verified as fixed in latest FF68.
I will attach a post fix video
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Updated•3 years ago
|
Description
•