Bug 1536730 - Avoid using keyboard focus for routing mouse events meant for a sidebar. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D24237